--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -4,15 +4,25 @@
   gap: 10px;
 }
 
+.item::before {
+  content: '🧡';
+  padding-right: 10px;
+}
+
+.item {
+  display: flex;
+}
+
 .text {
   display: inline-block;
-  padding-right: 10px;
+  margin-right: auto;
   font-style: italic;
 }
 
 .btn {
-  padding: 5px;
+  margin-left: 10px;
+  padding: 10px;
   background-color: rgb(248, 214, 182);
-  border: 2px solid #fff;
+  border: none;
   border-radius: 10px;
 }
